--- a/_config.yml
+++ b/_config.yml
@@ -33,13 +33,14 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  Caffeine In  &#124;==>  Code Out
+  &nbsp; &nbsp; *Caffeine In  ==>  Code Out*
+# &#124; - |
 
 # A list of keywords for your blog
 keywords:              [pvgupta24, NITK, Computer, Engineering]
 
 # Used by jekyll-seo-tag...
-logo:                  /assets/icons/icon.png
+logo:                  /assets/icons/favicon.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 # Duplication is necessary due to the `jekyll-feed`, `jekyll-seo-tag` plugin.
@@ -85,6 +86,9 @@ font:                  Noto Sans, Helvetica, Arial, sans-serif
 
 # The font used for headings. Expects a string that is a valid CSS font-family value.
 font_heading:          Roboto Slab, Helvetica, Arial, sans-serif
+
+# The default text alignment used for the site. Expects left|right|center|justify|initial|inherit.
+text_align: justify
 
 # 3rd Party Integrations
 # ----------------------------------------------------------------------------------------
