Blog minor updates and fixes

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,8 @@ author1:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     Hi, I am **Praveen Kumar Gupta** or **@pvgupta24** and I am a pre-final year
-    undergraduate student at [*National Institue of Technology, Karnataka*](http://nitk.ac.in).
+    undergraduate student pursuing Computer Engineering at [*National Institue of Technology,
+    Karnataka*](http://nitk.ac.in).
 
     Driven by my passion for technology, I want to learn and explore more in the field :)
 
