Blog update : GSoC Phase 2

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Hi, I am **Praveen Kumar Gupta** or **@pvgupta24** and I am a pre-final year
+    Hi, I am **Praveen Kumar Gupta** or **@pvgupta24** and I am a junior year
     undergraduate student pursuing Computer Engineering at [*National Institue of Technology,
     Karnataka*](http://nitk.ac.in).
 
