Updates resume and profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,7 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  &nbsp; &nbsp; *Caffeine In  ==>  Code Out*
-# &#124; - |
+  *Code &#124; Travel &#124; Music*
 
 # A list of keywords for your blog
 keywords:              [pvgupta24, NITK, Computer, Engineering]
