--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,15 +8,15 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Hi, I am **Praveen Kumar Gupta** or **@pvgupta24** and I am a junior year
-    undergraduate student pursuing Computer Engineering at [*National Institue of Technology,
+    Hi, I am **Praveen Kumar Gupta** or **@pvgupta24** and I am a senior year
+    undergraduate student pursuing Computer Science & Engineering at [*National Institue of Technology,
     Karnataka*](http://nitk.ac.in).
 
     Driven by my passion for technology, I want to learn and explore more in the field :)
 
   # This photo will be used in the about section
   picture:
-    path:            https://media.licdn.com/dms/image/C4E03AQFUIsXf9od1FQ/profile-displayphoto-shrink_200_200/0?e=1539820800&v=beta&t=TaPA6ZA4BSju0BnieK40lRMZHZ1otN-nhyxhJZ7YslY
+    path:            https://drive.google.com/uc?id=1WG7Aljct_4fFF-enUcTi0026ZobPeZhJ
     #https://placehold.it/128x128
     # srcset is optional, but can be used to provide higher res versions for retina displays
     # srcset:
