--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,11 +8,9 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Hi, I am **Praveen Kumar Gupta** or **@pvgupta24** and I am a senior year
-    undergraduate student pursuing Computer Science & Engineering at [*National Institue of Technology,
-    Karnataka*](http://nitk.ac.in).
+    Hi, I am **Praveen Kumar Gupta** or **@pvgupta24**. I am a 2nd year [Research Fellow](https://www.microsoft.com/en-us/research/academic-program/research-fellows-program-at-microsoft-research-india),
+    at Microsoft Research, India working on problems in big data systems.
 
-    Driven by my passion for technology, I want to learn and explore more in the field :)
 
   # This photo will be used in the about section
   picture:
@@ -27,11 +25,11 @@ author1:
   # Comment/uncomment to show/hide
   # Rearrange to change the order in which they appear
   social:
-    # twitter:         pvgupta24
+    twitter:         pvgupta24
     github:          pvgupta24
     email:           mailto:pvgupta24@gmail.com
     # rss:             https://<url>/feed.xml
-    facebook:        pvgupta24
+    # facebook:        pvgupta24
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
