--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,8 +8,10 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Hi, I am **Praveen Kumar Gupta** or **@pvgupta24**. I am a 2nd year [Research Fellow](https://www.microsoft.com/en-us/research/academic-program/research-fellows-program-at-microsoft-research-india),
-    at Microsoft Research, India working on problems in big data systems.
+    Hi, I am **Praveen Gupta [@pvgupta24]**. I am interested in large scale systems that can impact people across the globe.
+    I am currently a [PhD track](https://www.cs.ubc.ca/students/grad/prospective-grads/grad-programs/phd-track-msc-program)
+    MSc student at The University of British Columbia. Prior to this I worked as a [Research Fellow](https://www.microsoft.com/en-us/research/academic-program/research-fellows-program-at-microsoft-research-india),
+    at Microsoft Research. [Read more...](/about)
 
 
   # This photo will be used in the about section
