Updates about me

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -2,7 +2,7 @@
   "lang": "en",
   "name": "Praveen Gupta",
   "short_name": "Praveen Gupta",
-  "description": "Personal Website of Praveen Kumar Gupta, computer engineering student of National Institute of Technology, Karnataka to showcase life experiences and other views.",
+  "description": "Personal Website of Praveen Kumar Gupta",
   "start_url": "/?utm_source=homescreen",
   "theme_color": "#1264a8",
   "background_color": "#fff",
