--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,14 +9,12 @@ author1:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     Hi, I am **Praveen Gupta [@pvgupta24]**. I am interested in large scale systems that can impact people across the globe.
-    I am currently a [PhD track](https://www.cs.ubc.ca/students/grad/prospective-grads/grad-programs/phd-track-msc-program)
-    MSc student at The University of British Columbia. Prior to this I worked as a [Research Fellow](https://www.microsoft.com/en-us/research/academic-program/research-fellows-program-at-microsoft-research-india),
+    I am currently a Graduate Researcher at The University of British Columbia. Prior to this I worked as a [Research Fellow](https://www.microsoft.com/en-us/research/academic-program/research-fellows-program-at-microsoft-research-india),
     at Microsoft Research. [Read more...](/about)
-
 
   # This photo will be used in the about section
   picture:
-    path:            https://drive.google.com/uc?id=1WG7Aljct_4fFF-enUcTi0026ZobPeZhJ
+    path:            https://drive.google.com/uc?id=1wc7yvakE8zgS2Yov7xraqPUBF2YNZXY-
     #https://placehold.it/128x128
     # srcset is optional, but can be used to provide higher res versions for retina displays
     # srcset:
