--- a/_config.yml
+++ b/_config.yml
@@ -27,14 +27,14 @@ title:                 Praveen Gupta
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Personal Website of Praveen Kumar Gupta
+  Personal Website of Praveen Gupta
 
 # A shorter description for the sidebar.
 tagline:               >
-  *Code &#124; Travel &#124; Music*
+  *Code &#124; Travel*
 
 # A list of keywords for your blog
-keywords:              [pvgupta24, NITK, MSR, CSE, Systems]
+keywords:              [pvgupta24, UBC, NITK, MSR, Microsoft, CSE, Systems, GSOC, Serverless]
 
 # Used by jekyll-seo-tag...
 logo:                  /assets/icons/favicon.png
@@ -51,7 +51,7 @@ author:
   # twitter:             pvgupta24
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             Copyright © 2018. Praveen Kumar Gupta.
+# copyright:             Copyright © 2018. Praveen Gupta.
 
 # Add links to the footer.
 # Typically you'll want to link to your impress, cookies or privacy policy, etc.
