--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,12 +12,11 @@ author1:
 
   # This photo will be used in the about section
   picture:
-    path:            https://drive.google.com/uc?id=1wc7yvakE8zgS2Yov7xraqPUBF2YNZXY-
-    #https://placehold.it/128x128
+    path:            /assets/img/profile/pvgupta24-profile.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            https://drive.google.com/uc?id=1wc7yvakE8zgS2Yov7xraqPUBF2YNZXY-
-      2x:            https://drive.google.com/uc?id=1wc7yvakE8zgS2Yov7xraqPUBF2YNZXY-
+      1x:            /assets/img/profile/pvgupta24-profile.jpg
+      2x:            /assets/img/profile/pvgupta24-profile.jpg
 
   # Social media icons in sidebar
   # Comment/uncomment to show/hide
